--- a/Style.css
+++ b/Style.css
@@ -50,6 +50,15 @@ body {
             text-transform: uppercase;
             font-size: 50px;
         }
+        h3{
+            text-align: center;
+            margin-left: 0px;
+            margin-right: 0px;
+            position: absolute;
+            width: 100px;
+            text-transform: uppercase;
+            font-size: 50px;
+        }
 /*Content page */
         img {
             border-radius: 4px;
